updating my selenium lecture notes

--- a/pt2/selenium_lecture.ipynb
+++ b/pt2/selenium_lecture.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "id": "51d44ee5-6be6-4c5a-8810-8f2ffaaab3de",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "id": "96297862-07a0-41c7-ae7d-e8da85812b16",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "id": "5addde64-403f-4600-8852-8fe902f7dfed",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "id": "61ba8544-cb94-4e3f-9bad-9e208fde2217",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "id": "e1f698a3-fef1-4179-bf13-14dfbf6425f1",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "id": "4b0b8b37-6bc6-4ac2-bf1e-0e993eed01c1",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "id": "0e6ab44f-97d6-4800-a5f4-2223fdd04ecd",
    "metadata": {},
    "outputs": [],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "id": "4e27dffa-93cf-4188-8dd9-2736fc0f62f5",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
        "1395"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "id": "97c322cf-5741-420e-a757-f9485a6facf6",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
        "28"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "id": "cada0c2d-e18a-4669-ad16-598b20e3c126",
    "metadata": {},
    "outputs": [],
@@ -399,23 +399,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "5412010b-5e02-4647-8795-01f837c3eeb7",
+   "execution_count": 53,
+   "id": "7a9b7d5c-4b7e-4523-b43f-028a3c37ed7a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 29)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m29\u001b[0m\n\u001b[0;31m    page_data = []\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    " \n",
     "#Creating blank dataframe\n",
-    "     hearings = pd.DataFrame(\n",
+    "hearings = pd.DataFrame(\n",
     "     columns=[\n",
     "        'Serial No.',\n",
     "        'Name',\n",
@@ -429,17 +419,41 @@
     "        'Case Type',\n",
     "        'Defense Atty',\n",
     "        'DA'\n",
-    "    ])\n",
-    "    \n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "5412010b-5e02-4647-8795-01f837c3eeb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "StaleElementReferenceException",
+     "evalue": "Message: stale element reference: element is not attached to the page document\n  (Session info: chrome=96.0.4664.93)\nStacktrace:\n0   chromedriver                        0x000000010d707269 __gxx_personality_v0 + 582729\n1   chromedriver                        0x000000010d692c33 __gxx_personality_v0 + 106003\n2   chromedriver                        0x000000010d24fe28 chromedriver + 171560\n3   chromedriver                        0x000000010d252ca1 chromedriver + 183457\n4   chromedriver                        0x000000010d252ac1 chromedriver + 182977\n5   chromedriver                        0x000000010d252d5c chromedriver + 183644\n6   chromedriver                        0x000000010d28c470 chromedriver + 418928\n7   chromedriver                        0x000000010d28a33e chromedriver + 410430\n8   chromedriver                        0x000000010d287b5a chromedriver + 400218\n9   chromedriver                        0x000000010d2865f1 chromedriver + 394737\n10  chromedriver                        0x000000010d27a659 chromedriver + 345689\n11  chromedriver                        0x000000010d2a2962 chromedriver + 510306\n12  chromedriver                        0x000000010d279f45 chromedriver + 343877\n13  chromedriver                        0x000000010d2a2c7e chromedriver + 511102\n14  chromedriver                        0x000000010d2b5462 chromedriver + 586850\n15  chromedriver                        0x000000010d2a2c23 chromedriver + 511011\n16  chromedriver                        0x000000010d27875e chromedriver + 337758\n17  chromedriver                        0x000000010d279a95 chromedriver + 342677\n18  chromedriver                        0x000000010d6c38ab __gxx_personality_v0 + 305803\n19  chromedriver                        0x000000010d6da863 __gxx_personality_v0 + 399939\n20  chromedriver                        0x000000010d6dfc7f __gxx_personality_v0 + 421471\n21  chromedriver                        0x000000010d6dbbba __gxx_personality_v0 + 404890\n22  chromedriver                        0x000000010d6b7e51 __gxx_personality_v0 + 258097\n23  chromedriver                        0x000000010d6f7158 __gxx_personality_v0 + 516920\n24  chromedriver                        0x000000010d6f72e1 __gxx_personality_v0 + 517313\n25  chromedriver                        0x000000010d70e6f8 __gxx_personality_v0 + 612568\n26  libsystem_pthread.dylib             0x00007fff203fd8fc _pthread_start + 224\n27  libsystem_pthread.dylib             0x00007fff203f9443 thread_start + 15\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mStaleElementReferenceException\u001b[0m            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/8f/ltkfkrqs0td3f4qqg71t50t40000gn/T/ipykernel_92433/3351550167.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpages_to_check\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mnext_button\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLINK_TEXT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'>'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mnext_button\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclick\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m# Bs4 soup code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.8.5/envs/scraping-lecture-3.8.5/lib/python3.8/site-packages/selenium/webdriver/remote/webelement.py\u001b[0m in \u001b[0;36mclick\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     79\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclick\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m         \u001b[0;34m\"\"\"Clicks the element.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 81\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_execute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCommand\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCLICK_ELEMENT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     82\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0msubmit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.8.5/envs/scraping-lecture-3.8.5/lib/python3.8/site-packages/selenium/webdriver/remote/webelement.py\u001b[0m in \u001b[0;36m_execute\u001b[0;34m(self, command, params)\u001b[0m\n\u001b[1;32m    708\u001b[0m             \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    709\u001b[0m         \u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'id'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_id\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 710\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    711\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    712\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mfind_element\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mby\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mBy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mID\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.8.5/envs/scraping-lecture-3.8.5/lib/python3.8/site-packages/selenium/webdriver/remote/webdriver.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, driver_command, params)\u001b[0m\n\u001b[1;32m    422\u001b[0m         \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommand_executor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdriver_command\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    423\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 424\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror_handler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheck_response\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    425\u001b[0m             response['value'] = self._unwrap_value(\n\u001b[1;32m    426\u001b[0m                 response.get('value', None))\n",
+      "\u001b[0;32m~/.pyenv/versions/3.8.5/envs/scraping-lecture-3.8.5/lib/python3.8/site-packages/selenium/webdriver/remote/errorhandler.py\u001b[0m in \u001b[0;36mcheck_response\u001b[0;34m(self, response)\u001b[0m\n\u001b[1;32m    245\u001b[0m                 \u001b[0malert_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'alert'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'text'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    246\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malert_text\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 247\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    248\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    249\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_value_or_default\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mMapping\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0m_KT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_VT\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0m_KT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0m_VT\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0m_VT\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mStaleElementReferenceException\u001b[0m: Message: stale element reference: element is not attached to the page document\n  (Session info: chrome=96.0.4664.93)\nStacktrace:\n0   chromedriver                        0x000000010d707269 __gxx_personality_v0 + 582729\n1   chromedriver                        0x000000010d692c33 __gxx_personality_v0 + 106003\n2   chromedriver                        0x000000010d24fe28 chromedriver + 171560\n3   chromedriver                        0x000000010d252ca1 chromedriver + 183457\n4   chromedriver                        0x000000010d252ac1 chromedriver + 182977\n5   chromedriver                        0x000000010d252d5c chromedriver + 183644\n6   chromedriver                        0x000000010d28c470 chromedriver + 418928\n7   chromedriver                        0x000000010d28a33e chromedriver + 410430\n8   chromedriver                        0x000000010d287b5a chromedriver + 400218\n9   chromedriver                        0x000000010d2865f1 chromedriver + 394737\n10  chromedriver                        0x000000010d27a659 chromedriver + 345689\n11  chromedriver                        0x000000010d2a2962 chromedriver + 510306\n12  chromedriver                        0x000000010d279f45 chromedriver + 343877\n13  chromedriver                        0x000000010d2a2c7e chromedriver + 511102\n14  chromedriver                        0x000000010d2b5462 chromedriver + 586850\n15  chromedriver                        0x000000010d2a2c23 chromedriver + 511011\n16  chromedriver                        0x000000010d27875e chromedriver + 337758\n17  chromedriver                        0x000000010d279a95 chromedriver + 342677\n18  chromedriver                        0x000000010d6c38ab __gxx_personality_v0 + 305803\n19  chromedriver                        0x000000010d6da863 __gxx_personality_v0 + 399939\n20  chromedriver                        0x000000010d6dfc7f __gxx_personality_v0 + 421471\n21  chromedriver                        0x000000010d6dbbba __gxx_personality_v0 + 404890\n22  chromedriver                        0x000000010d6b7e51 __gxx_personality_v0 + 258097\n23  chromedriver                        0x000000010d6f7158 __gxx_personality_v0 + 516920\n24  chromedriver                        0x000000010d6f72e1 __gxx_personality_v0 + 517313\n25  chromedriver                        0x000000010d70e6f8 __gxx_personality_v0 + 612568\n26  libsystem_pthread.dylib             0x00007fff203fd8fc _pthread_start + 224\n27  libsystem_pthread.dylib             0x00007fff203f9443 thread_start + 15\n"
+     ]
+    }
+   ],
+   "source": [
     "for n in range(pages_to_check):\n",
-    "     next_button = driver.find_element(By.LINK_TEXT, '>')\n",
-    "     next_button.click()\n",
+    "    next_button = driver.find_element(By.LINK_TEXT, '>')\n",
+    "    next_button.click()\n",
     "        \n",
     "    # Bs4 soup code\n",
     "    \n",
     "    # Get table by ID\n",
-    "     soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
-    "     table = soup.find(id='MainContent_gvResult')\n",
+    "    soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
+    "    table = soup.find(id='MainContent_gvResult')\n",
     "    \n",
     "    # create a simple `page_data` list to store the page data before we make a pandas dataframe\n",
     "    page_data = []\n",
